<resources>
    <string name="app_name">Coinz</string>
    <string name="google_web_client_id">175381305723-2c660901vlmcc85hocbpja0vpv7up1ng.apps.googleusercontent.com</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZWxla3Ryb2t0YXkiLCJhIjoiY2pvMzNtMGVpMHFudTNxbnN5aG50ajZ6NCJ9.ShbJ-lJqBLmid4lbZ8pQ9A</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_shop">Shop</string>
    <string name="title_map">Map</string>
    <string name="title_trading">Trading</string>
    <string name="title_leaderboard">Leaderboard</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="login_prompt">Login using:</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="password_again">Password (again)</string>
    <string name="reset_password">Reset Password</string>

    <string name="location_permission_explanation">You need to accept location permissions.</string>
    <string name="location_permission_not_granted">Could not acquire location permissions.</string>
    <string name="location_permission_explanation_title">Grant location permissions?</string>
    <string name="trading_nothing_selected">Try finding someone to trade with on the left!</string>
    <string name="username">Username</string>
    <string name="username_explanation">Whom do you want to trade with?</string>
    <string name="trade_submit">Trade</string>
    <string name="check_username">Select</string>
    <string name="username_confirmation">Let\'s go!</string>
    <string name="username_message">Welcome to Coinz!\nChoose your username:</string>
    <string name="change_username">Change Username</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
</resources>
