<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_trading"
        android:icon="@drawable/ic_compare_arrows_black_24dp"
        android:title="@string/title_trading" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/store"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/trophy"
        android:title="@string/title_leaderboard" />

</menu>
