<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/login_prompt"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">
    <RelativeLayout
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:elevation="0dp"
            android:layout_alignParentStart="true"
            />
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@android:color/transparent"
            android:text="@string/register"
            android:textAllCaps="false"
            android:elevation="0dp"
            android:layout_gravity="center"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/login_input_email"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <EditText
        android:id="@+id/login_input_password"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="@color/text_white"
        android:text="@string/login"
        android:elevation="4dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <Button
        android:id="@+id/login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password_question"
        android:textAllCaps="false"
        android:elevation="0dp"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
</LinearLayout>