<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_below="@id/login_prompt"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_message"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <android.support.design.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/login_username_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/username_confirmation"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
</LinearLayout>