<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:contentPaddingTop="8dp"
    app:contentPaddingBottom="8dp"
    app:contentPaddingLeft="4dp"
    app:contentPaddingRight="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Offer from them"/>
        <TextView
            android:id="@+id/to_title"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You get"
            android:layout_below="@id/title"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/to_inventory"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal"
            android:layout_below="@id/to_title" />
        <TextView
            android:id="@+id/from_title"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="They get"
            android:layout_below="@id/to_inventory"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/from_inventory"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal"
            android:layout_below="@id/from_title"/>
        <LinearLayout
            android:id="@+id/accept_reject_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/from_inventory"
            android:orientation="horizontal"
            android:visibility="gone">
            <android.support.design.button.MaterialButton
                android:id="@+id/accept_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept" />
            <android.support.design.button.MaterialButton
                android:id="@+id/reject_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cancel_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/from_inventory"
            android:orientation="horizontal"
            android:visibility="gone">
            <android.support.design.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </RelativeLayout>
</android.support.design.card.MaterialCardView>