<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.card.MaterialCardView
            android:id="@+id/username_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPaddingTop="8dp"
            app:contentPaddingBottom="8dp"
            app:contentPaddingLeft="4dp"
            app:contentPaddingRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/username_explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_explanation"/>
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_explanation"
                    android:layout_toStartOf="@id/username_button"
                    android:hint="@string/username"
                    android:inputType="textPersonName" />
                <android.support.design.button.MaterialButton
                    android:id="@+id/username_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/username"
                    android:layout_alignBottom="@id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_username"/>
            </RelativeLayout>
        </android.support.design.card.MaterialCardView>
        <LinearLayout
            android:id="@+id/second_half_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/username_container">
            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPaddingTop="8dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="4dp"
                app:contentPaddingRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/to_title"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Their Inventory"/>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/to_inventory"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:orientation="horizontal"
                        android:layout_below="@id/to_title"/>
                </RelativeLayout>
            </android.support.design.card.MaterialCardView>
            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPaddingTop="8dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="4dp"
                app:contentPaddingRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/from_title"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Your Inventory"/>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/from_inventory"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:orientation="horizontal"
                        android:layout_below="@id/from_title"/>
                </RelativeLayout>
            </android.support.design.card.MaterialCardView>
            <android.support.design.button.MaterialButton
                android:id="@+id/submit_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/trade_submit"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>